# hand-sync-arduino

./: .gitignore  README.md
hand-control/: .env.example  README.md  pyproject.toml
hand-control/hand_control/: control.py  cv-poc.py  main.py
src/: main.cpp  main_handshake.cpp_
