[tool.poetry]
name = "hand-control"
version = "0.1.0"
description = ""
authors = ["kanghohyeong <hobro.kang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
serial = "^0.0.97"
pyserial = "^3.5"
opencv-python = "^4.11.0.86"
mediapipe = "^0.10.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
